--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ background-color: #ffffff;
 .page-nav .link:hover, .page-nav link:focus{
     color: #404bbf;
 }
-a.page-nav .link:active{
+.page-nav .link:active{
     color: #404bbf;
 }
 .contacts{
@@ -77,7 +77,7 @@ h1 {
     background-color: #404BBF;
 }
 a.button:active{
-    background-color: #404BBF;
+    color: #404BBF;
 }
 .strategy{
     text-align:center;
