--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ background-color: #2e2f42;
     align-content: center;
 }
 .container {
-    width: 1158;
+    width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
 }
