--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ a.contacts .link:active{
 .effective{
     background-color: #2e2f42;
     text-align:center;
-    padding:188px;
+    padding:188px 0;
 }
 h1 {
     text-align:center;
@@ -106,13 +106,7 @@ h1 {
     padding:120px 0;
 }
 .visually-hidden {
-    margin:-1;
-    overflow: hidden;
-    position:absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    border: 0;
+display:none;
 }
 .list{
     list-style-type: none;
@@ -171,6 +165,7 @@ background-color: #2e2f42;
 .point{
     background-color: #ffffff;
     border-radius: 0px 0px 4px 4px;
+    width:calc((100%-72px)/4);
 
 }
 .section {
@@ -218,4 +213,7 @@ align-items: center;
     letter-spacing:0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
+}
+.nametag {
+    padding:32px 16px;
 }
