--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,6 @@ background-color: #2e2f42;
     background-color: #ffffff;
     border-radius: 0px 0px 4px 4px;
     width:calc((100%-72px)/4);
-
 }
 .section {
     padding: 120px 0;
@@ -203,7 +202,7 @@ align-items: center;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:#434455;
-    width:calc((100%-72px)/4);
+    width: calc((100%-72px)/4);
 }
 .strategy-title{
     color:#434455;
@@ -215,5 +214,20 @@ align-items: center;
     margin-bottom: 8px;
 }
 .nametag {
+    padding: 32px 16px;
+}
+.portfolio-ul{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+.portfolio-list{
+    width: calc((100%-48px)/3);
+}
+.portfolio-desc{
     padding:32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top:none;
+    margin-bottom: 8px;
 }
