--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,16 @@ h1 {
     padding:120px 0;
 }
 .visually-hidden {
-display:none;
+position: absolute;
+width: 1px;
+height: 1px;
+margin: -1px;
+border: 0;
+padding: 0;
+white-space: nowrap;
+clip-path: inset(100%);
+clip: rect(0 0 0 0);
+overflow:hidden;
 }
 .list{
     list-style-type: none;
@@ -202,7 +211,7 @@ align-items: center;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:#434455;
-    width: calc((100%-72px)/4);
+    width: calc((100% - 72px)/4);
 }
 .strategy-title{
     color:#434455;
@@ -214,7 +223,7 @@ align-items: center;
     margin-bottom: 8px;
 }
 .nametag {
-    padding: 32px 16px;
+    padding:32px 16px;
 }
 .portfolio-ul{
     display: flex;
@@ -223,7 +232,7 @@ align-items: center;
     row-gap: 48px;
 }
 .portfolio-list{
-    width: calc((100%-48px)/3);
+    width: calc((100% - 48px)/3);
 }
 .portfolio-desc{
     padding:32px 16px;
