--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,7 @@ overflow:hidden;
 }
 .footer{
 background-color: #2e2f42;
+padding: 100px;
 }
 .logo-footer{
     color:#f4f4fd;
@@ -170,6 +171,7 @@ background-color: #2e2f42;
     line-height:1.5;
     color:#F4F4FD;
     letter-spacing:0.02em;
+    max-width: 264px;
 }
 .point{
     background-color: #ffffff;
@@ -232,11 +234,15 @@ align-items: center;
     row-gap: 48px;
 }
 .portfolio-list{
-    width: calc((100% - 48px) / 3);
+    width: calc((100% - 48px) /3);
 }
 .portfolio-desc{
     padding:32px 16px;
     border: 1px solid #e7e9fc;
     border-top:none;
     margin-bottom: 8px;
+}
+.box-footer{
+    display:inline-block;
+    margin-bottom:16px;
 }
