--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ overflow:hidden;
 }
 .footer{
 background-color: #2e2f42;
-padding: 100px;
+padding: 100px 0;
 }
 .logo-footer{
     color:#f4f4fd;
@@ -234,7 +234,7 @@ align-items: center;
     row-gap: 48px;
 }
 .portfolio-list{
-    width: calc((100% - 48px) /3);
+    width: calc((100% - 48px) / 3);
 }
 .portfolio-desc{
     padding:32px 16px;
