--- a/css/styles.css
+++ b/css/styles.css
@@ -269,3 +269,13 @@ align-items: center;
 .portfolio {
 margin-bottom:72px;
 }
+.name {
+    color:#434455;
+    font-weight: 500;
+    font-size:20px;
+    line-height:1.2;
+    letter-spacing:0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+    text-align: center;
+}
