--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,11 @@ background-color: #ffffff;
     letter-spacing: 0.03em;
     margin-right:76px;
 }
-.logo .link{
+.link{
     color: #404BBF;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.logo .link::after{
+.link::after{
     content:"";
     width:100%;
     position:absolute;
