--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,12 @@ background-color: #ffffff;
     letter-spacing: 0.03em;
     margin-right:76px;
 }
-.link{
+.current{
+    position:relative;
     color: #404BBF;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link::after{
+.current ::after{
     content:"";
     width:100%;
     position:absolute;
