--- a/css/styles.css
+++ b/css/styles.css
@@ -42,12 +42,12 @@ background-color: #ffffff;
     letter-spacing: 0.03em;
     margin-right:76px;
 }
-.current{
+.link{
     position:relative;
     color: #404BBF;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.current ::after{
+.current::after{
     content:"";
     width:100%;
     position:absolute;
