--- a/css/styles.css
+++ b/css/styles.css
@@ -43,9 +43,11 @@ background-color: #ffffff;
     margin-right:76px;
 }
 .link{
-    position:relative;
-    color: #404BBF;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.current{
+    position: relative;
+    color: #404bbf;
 }
 .current::after{
     content:"";
@@ -104,6 +106,11 @@ a.contacts .link:active{
     background-color: #2e2f42;
     text-align:center;
     padding:188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office.jpg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 h1 {
     text-align:center;
@@ -129,6 +136,7 @@ h1 {
     border:none;
     border-radius: 4px;
     margin:0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover{
     background-color: #404BBF;
