--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,7 @@ a.contacts .link:active{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    justify-content: center;
 }
 h1 {
     text-align:center;
@@ -331,4 +332,13 @@ text-align: center;
   .icon-icon1 {
     width: 2.357421875em;
   }
-  
+  .strategy-icon{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+  }
